# siminator

./: .gitignore  LICENSE  README.md  inator.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/pt-br/: inator-engine.md  inicio.md
src/siminator/: __init__.py  camera.py  draw.py  drawable.py  ellipsoid.py  inator_engine.py  physics.py  screen_info.py  si_math.py  si_types.py  vec3.py  window.py
tests/: test_vec3.py
