[metadata]
name = siminator
version = attr: siminator.__version__
author = Fernando Ribeiro Alves
author_email = fernandoribeiro889@gmail.com
description = Simulador físico em Python - Conceitual
long_description = file: README.md, LICENSE
license = MIT License

[options]
package_dir = =src
packages = find:
python_requires = >=3.11

[options.packages.find]
where=src
exclude = 
    docs*
    experiments*